Prepare 0.3.0, and write the four entries the CHANGELOG had not got to (#17)
Eight commits have landed since 0.2.0 and four of them left the CHANGELOG
untouched, so this cuts the Unreleased section into 0.3.0 and fills the gaps
rather than releasing a section that describes some of the release.

Two of the four ship something and are now entries. The nested summary overload
is Added with the reason depth has no default -- the cost is exponential in it,
so the number is the caller's to write. runTextBoundCost is Added beside
runDrain, with the step-and-flat curves that refuse an adaptive bound. The
CatalogOptions.textBoundBytes correction is a new Fixed section: its KDoc named
itself as the dial that prunes, in a published module's public API, and the
dial that prunes is IndexOptions.columnTextBoundBytes.

The other two changed no shipped byte and are still worth a section, because
both answer a question a user will otherwise ask. Considered and refused holds
the JSONPath filter that cannot be a Predicate -- P and not-P are both true of
{"tags":["a","b"]} -- and the QueryCursor witnesses that cannot be total, since
a negated leaf has none and an empty set would mean two things at once. Each
names the test that pins it.

Compatibility gained the two facts it was missing beside the golden store: no
format version moved, and LOCK now carries a diagnostic line that is not a
format -- no magic, no version, byte zero still the lock, so releases stay
mixable on one directory.

Upgrading is where the one real break is stated. @RaboshExperimental is an
opt-in ERROR, so 0.2.0 source reaching past the stable core no longer compiles;
binary compatibility is unaffected, the marker being BINARY-retained and read by
nothing at run time. It also says the --enable-native-access flag can be
dropped.

Three claims had gone stale and are corrected while they are cheap. STABILITY.md
said the stable core "has not moved in two releases", which was about to be
wrong in the count rather than